--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Home page
   <img src="karate.JPG" width="40%" height="40%" align="left" hspace="100" vspace="0">
   <p>My name is Nathan Sivak and I am a Junior at Miami University. I am from Cleveland, Ohio where I grew up with my sister,
     mom, and dad. Growing up, I had three dogs, a bunch of fish, and a turtle named Rocky. Two weeks ago, I got my first hamster
-    named Jade who lives with me in my off campus apartment. She is a black and white Syrian Hamster who loves broccli.
+    named Jade who lives with me in my off campus apartment. She is a black and white Syrian Hamster who loves broccoli.
     I am currently majoring in Software Engineering with a General Business minor. In the past, I was involved with Miami's
     Stage Left club and was in their 2019 show, "Pippin". Currently, I am a member of the Miami Martial Arts Club where we train
      in traditional Taekwondo, Hapkido, and Judo. I am also an assistant instructor at my karate school back home where I have
